src/test/ui/consts/const-eval/assign-to-static-within-other-static.stderr
error: cannot mutate statics in the initializer of another static
  --> $DIR/assign-to-static-within-other-static.rs:10:5
   |
LL |     FOO = 5; //~ ERROR cannot mutate statics in the initializer of another static
   |     ^^^^^^^

error: aborting due to previous error

